[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WonderPeaks"
version = "0.1.0"
requires-python = ">=3.8"

authors = [
  {name = "Megan E. Garber", email = "mgarber21@gmail.com"},
]

maintainers = [
  {name = "Megan E. Garber", email = "mgarber21@gmail.com"}
]

description = "functions for peakcalling enriched peaks in ChIP-seq and untranslateed regions in 3'RNA-seq in Fungi"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["ChIP-seq", "RNA-seq", "NGS", "WonderPeaks", "peak calling", "UTR", "dynamic UTR", "Fungi", "Yeast"]

classifiers = [
  "Development Status :: Beta",
  "Programming Language :: Python"
]


[project.urls]
Repository = "https://github.com/mgarber21/WonderPeaks.git"
"Bug Tracker" = "https://github.com/mgarber21/WonderPeaks/issues"


